BKP: this commit will be amended/erased/rewritten

--- a/tests/small/LandIce/FO_Hydrology/input_dome_steadyT.yaml
+++ b/tests/small/LandIce/FO_Hydrology/input_dome_steadyT.yaml
@@ -161,7 +161,7 @@ ANONYMOUS:
             Field Type: Node Scalar
             Field Usage: Output
           Field 6: 
-            Field Name: hydraulic_potential
+            Field Name: hydropotential
             Field Type: Node Scalar
             Field Usage: Output
           Field 7: 
